// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-search #render help should render component as expected 1`] = `
<gux-form-field-search>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <gux-icon decorative="" icon-name="fa/magnifying-glass-regular"></gux-icon>
            <slot name="input"></slot>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input aria-describedby="gux-form-field-help-i" id="gux-form-field-input-i" name="e-1" slot="input" type="search">
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-search>
`;

exports[`gux-form-field-search #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-search>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <gux-icon decorative="" icon-name="fa/magnifying-glass-regular"></gux-icon>
            <slot name="input"></slot>
            <gux-form-field-input-clear-button></gux-form-field-input-clear-button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" slot="input" type="search" value="Sample search">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-search>
`;

exports[`gux-form-field-search #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-search>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-disabled gux-input-container">
            <gux-icon decorative="" icon-name="fa/magnifying-glass-regular"></gux-icon>
            <slot name="input"></slot>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input disabled="" id="gux-form-field-input-i" slot="input" type="search" value="Sample search">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-search>
`;

exports[`gux-form-field-search #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-search>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-asterisk gux-form-field-label gux-required">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <gux-icon decorative="" icon-name="fa/magnifying-glass-regular"></gux-icon>
            <slot name="input"></slot>
            <gux-form-field-input-clear-button></gux-form-field-input-clear-button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" required="" slot="input" type="search" value="Sample search">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-search>
`;

exports[`gux-form-field-search #render label-position should render component as expected (1) 1`] = `
<gux-form-field-search>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <gux-icon decorative="" icon-name="fa/magnifying-glass-regular"></gux-icon>
            <slot name="input"></slot>
            <gux-form-field-input-clear-button></gux-form-field-input-clear-button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" slot="input" type="search" value="Sample search">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-search>
`;

exports[`gux-form-field-search #render label-position should render component as expected (2) 1`] = `
<gux-form-field-search label-position="above">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <gux-icon decorative="" icon-name="fa/magnifying-glass-regular"></gux-icon>
            <slot name="input"></slot>
            <gux-form-field-input-clear-button></gux-form-field-input-clear-button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" slot="input" type="search" value="Sample search">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-search>
`;

exports[`gux-form-field-search #render label-position should render component as expected (3) 1`] = `
<gux-form-field-search label-position="beside">
  <mock:shadow-root>
    <div class="gux-beside gux-form-field-container">
      <div class="gux-beside gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <gux-icon decorative="" icon-name="fa/magnifying-glass-regular"></gux-icon>
            <slot name="input"></slot>
            <gux-form-field-input-clear-button></gux-form-field-input-clear-button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" slot="input" type="search" value="Sample search">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-search>
`;

exports[`gux-form-field-search #render label-position should render component as expected (4) 1`] = `
<gux-form-field-search label-position="screenreader">
  <mock:shadow-root>
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <gux-icon decorative="" icon-name="fa/magnifying-glass-regular"></gux-icon>
            <slot name="input"></slot>
            <gux-form-field-input-clear-button></gux-form-field-input-clear-button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" slot="input" type="search" value="Sample search">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-search>
`;
